# services/user_service/src/dto/user_requests.rs
@@ -2,6 +2,9 @@ use serde::Deserialize;
 use utoipa::ToSchema;
 
 #[derive(Deserialize, ToSchema)]
-pub struct UserUpdateRequest {
+pub struct UserCreateRequest {
     pub name: String,
+    pub email: Option<String>,
+    pub telegram: Option<String>,
+    pub password: String,
 }
